<resources>
    <string name="app_name">没钱记账</string>
    <string name="editone">添加账目</string>
    <string name="month_out">本月支出</string>
    <string name="out">支出</string>
    <string name="month_in">本月收入</string>
    <string name="in">收入</string>
    <string name="budget">预算剩余</string>
    <string name="set_budget">设置预算</string>
    <string name="see_excel">查看图表分析</string>
    <string name="add_remark">添加备注</string>
    <string name="remark">备注</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="history_record">账单记录</string>
    <string name="account_info">账单详情</string>
    <string name="message_alarm">定时提醒</string>
    <string name="desktop_smallbox">桌面部件</string>
    <string name="please_input_time">请输入时间(24小时制)</string>
    <string name="please_search_info">请输入搜索信息</string>
    <string name="date_empty">数据为空，无此类记录，请重新输入</string>
    <string name="chart_info">账单详情</string>


    <string name="about_appinfo">应用信息</string>
    <string name="about_version">版本</string>
    <string name="about_1">2.0</string>
    <string name="about_app">关于应用</string>
    <string name="about_balabala">本应用为简易记账本，点击控件可实现添加、删除、查看账目等功能。并可对账目的日期，金额，用途等进行记录。实时更新账目，以便获取最新的账单信息。利用图表等形式向用户展示收入支出，实现数据可视化。</string>
    <string name="about_app_new">更新内容</string>
    <string name="new_app">此次更新增加了定时提醒功能，可设置时间提醒使用者记录账目，提醒内容将在通知栏中显示。此外，可添加桌面小部件实现更加便捷地使用。</string>

    <string name="about_developer">开发者</string>
    <string name="about_me">关于我</string>
    <string name="about_loc">开发者：陈黎茜、王文卓、张晓阳、李晓萱合作开发。</string>

    <string name="history_info">本月账单记录</string>
    <string name="clear_all">清空所有记录</string>

    <string name="add_alarm">添加提醒</string>

    <string name="add_desktop_smallbox">添加桌面小部件</string>
    <string name="what_desktop_smallbox">什么是桌面小部件？</string>
    <string name="define_desktop_smallbox">没钱记账桌面小部件支持在手机桌面上快速发起记账。</string>
    <string name="how_desktop_smallbox">如何添加桌面小部件？</string>
    <string name="step1_desktop_smallbox">1.在手机桌面上双指沿对角线滑动屏幕（或者长按桌面空白区域）。</string>
    <string name="step2_desktop_smallbox">2.点击“窗口小工具”（或者“桌面组件”，不同型号的手机名称不同）。</string>
    <string name="step3_desktop_smallbox">3.找到没钱记账小部件，按住拖动至手机桌面上。</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="not_data">暂无数据</string>
    <string name="appwidget_button">记一笔</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_text">EXAMPLE</string>
</resources>
